--- a/styles/style.css
+++ b/styles/style.css
@@ -3,33 +3,58 @@ html {
 }
 
 body {
-  height:inherit;
   position: relative;
-  min-width: 800px;
   display: flex;
-
+  min-width: 800px;
+  height: inherit;
 }
 
 .video {
+  position: absolute;
+  z-index: -1;
   width: 100%;
   height: 100%;
-  position: absolute;
   object-fit: cover;
   object-position: center;
 }
 
 .title {
+  width: 50%;
+  margin-top: 60px;
+  margin-right: auto;
+  margin-left: auto;
   font-weight: 800;
   font-size: 116px;
-  text-transform: uppercase;
-  z-index: 1;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
-  margin-top: 60px;
+  text-transform: uppercase;
+}
+
+body:has(.title:hover)::after {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .title::after {
   content: "*";
+}
+
+.title:hover::before {
+  content: "На самом деле нет. \AВажнее &mdash; научиться ошибаться.";
+  position: absolute;
+  top: 20vh;
+  right: 1.25vw;
+  z-index: 1;
+  border: 2px solid #000;
+  border-radius: 20px;
+  padding: 44px 36px;
+  box-shadow: 0 14px 0 #000;
+  font-weight: normal;
+  font-size: 35px;
+  text-align: left;
+  text-transform: none;
+  background-color: #fff;
+  white-space: pre;
 }
