--- a/styles/style.css
+++ b/styles/style.css
@@ -2,59 +2,75 @@ html {
   height: 100%;
 }
 
-body {
+.page {
   position: relative;
   display: flex;
-  min-width: 800px;
+  height: 100%;
+  /* min-width: 800px; */
   height: inherit;
+
 }
 
-.video {
+.page__video {
   position: absolute;
-  z-index: -1;
+  inset:0;
+  z-index: -2;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
 
-.title {
-  width: 50%;
+.page__title {
+  max-width: 720px;
   margin-top: 60px;
   margin-right: auto;
   margin-left: auto;
   font-weight: 800;
   font-size: 116px;
+  line-height:136px;
+  letter-spacing: 0.035em;
   text-align: center;
   text-transform: uppercase;
 }
 
-body:has(.title:hover)::after {
+.page::after {
   content: " ";
   position: absolute;
+  inset:0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.title::after {
+.page__title::after {
   content: "*";
+  position: relative;
 }
 
-.title:hover::before {
+.page__title:hover::before {
   content: "На самом деле нет. \AВажнее &mdash; научиться ошибаться.";
   position: absolute;
-  top: 20vh;
-  right: 1.25vw;
-  z-index: 1;
+  top: 180px;
+  right: 20px;
+  z-index: 2;
+  max-width: 760px;
   border: 2px solid #000;
   border-radius: 20px;
-  padding: 44px 36px;
-  box-shadow: 0 14px 0 #000;
+  padding: 36px 44px;
+  box-shadow: 0 12px 0 #000;
   font-weight: normal;
   font-size: 35px;
+  line-height: 1;
+  letter-spacing: 0;
   text-align: left;
   text-transform: none;
   background-color: #fff;
   white-space: pre;
+}
+
+.page__title:hover {
+  color: #4C4C4C;
+  cursor: default;
 }
